imported jquery & changed port

--- a/templates/sharkwords.html
+++ b/templates/sharkwords.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sharkwords!</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <script
+    src="http://code.jquery.com/jquery-versionNumber.js"
+    integrity="blahblahblahblahblah"
+    crossorigin="anonymous"></script>
+
   </head>
   <body>
     <section id="shark-img">
